# fastapi-jinja-htmx-practice-1

./: README.md  main.py  pyproject.toml
app/: models.py
